# GenAI_Observability_Platform

./: GenAI-Observability-Platform-Architecture.docx  ObservabilityPlatform.drawio  README.md  architecture-diagram-complete.html  complete-conversation-transcript.md  enhanced-features-documentation.md  quick-reference-guide.md
.claude/: settings.local.json
genai-observability-platform/: .env.example  PLATFORM-OVERVIEW.md  PROGRESS.md  README.md  docker-compose.yaml
genai-observability-platform/.github/workflows/: ci.yaml  deploy.yaml  release.yaml
genai-observability-platform/api/: Dockerfile  Dockerfile.websocket  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml
genai-observability-platform/api/src/observability_api/: __init__.py  auth.py  auth_providers.py  config.py  main.py
genai-observability-platform/api/src/observability_api/db/: __init__.py  dynamodb.py  opensearch.py  timestream.py
genai-observability-platform/api/src/observability_api/models/: __init__.py  agents.py  alerts.py  auth.py  common.py  metrics.py  traces.py
genai-observability-platform/api/src/observability_api/routes/: __init__.py  agents.py  alerts.py  auth_sso.py  health.py  integrations.py  metrics.py  nl_query.py  remediation.py  traces.py
genai-observability-platform/api/src/observability_api/services/: __init__.py  agents.py  alerts.py  metrics.py  traces.py
genai-observability-platform/api/tests/: __init__.py  conftest.py  test_agents.py  test_alerts.py  test_auth_sso.py  test_health.py  test_integrations.py  test_metrics.py  test_nl_query.py  test_remediation.py  test_traces.py
genai-observability-platform/cli/: README.md  pyproject.toml
genai-observability-platform/cli/genai_obs/: __init__.py  client.py  config.py  main.py  output.py
genai-observability-platform/cli/genai_obs/commands/: __init__.py  agents.py  alerts.py  api_keys.py  metrics.py  traces.py
genai-observability-platform/database/migrations/: 001_initial_schema.sql  002_add_llm_investigation.sql
genai-observability-platform/docs/: architecture.md  deployment-guide.md  operations-runbook.md
genai-observability-platform/docs/api/: openapi.yaml
genai-observability-platform/examples/basic_agent/: README.md  agent.py  requirements.txt
genai-observability-platform/examples/langchain_agent/: agent.py
genai-observability-platform/frontend/: Dockerfile.dev  README.md  index.html  package.json
genai-observability-platform/frontend/src/: App.tsx  index.css
genai-observability-platform/frontend/src/components/: Badge.tsx  Card.tsx  Charts.tsx  Layout.tsx  Table.tsx  TimeRangeSelector.tsx  index.ts
genai-observability-platform/frontend/src/lib/: api.ts  hooks.ts  utils.ts
genai-observability-platform/frontend/src/pages/: AgentDetail.tsx  Agents.tsx  Alerts.tsx  Dashboard.tsx  Integrations.tsx  Login.tsx  Query.tsx  Remediation.tsx  Settings.tsx  TraceDetail.tsx  Traces.tsx  index.ts
genai-observability-platform/frontend/src/store/: index.ts
genai-observability-platform/frontend/src/types/: index.ts
genai-observability-platform/glue/: cost_analysis.py  error_patterns.py  token_aggregation.py  tool_analytics.py  trace_reconstruction.py
genai-observability-platform/infrastructure/: README.md  authentication.yaml  batch-processing.yaml  core.yaml  deploy.sh  ingestion.yaml  main.yaml  multi-region.yaml  notifications.yaml  processing.yaml  storage.yaml  websocket-api.yaml
genai-observability-platform/lambda/: Makefile  README.md  build.sh  deploy.sh  pytest.ini  requirements-test.txt
genai-observability-platform/lambda/alert_deduplicator/: handler.py
genai-observability-platform/lambda/anomaly_detector/: handler.py
genai-observability-platform/lambda/authorizer/: handler.py
genai-observability-platform/lambda/autonomous_remediation/: handler.py
genai-observability-platform/lambda/email_formatter/: handler.py
genai-observability-platform/lambda/health/: handler.py
genai-observability-platform/lambda/ingestion/: handler.py
genai-observability-platform/lambda/integrations/: handler.py
genai-observability-platform/lambda/llm_investigator/: handler.py  requirements.txt
genai-observability-platform/lambda/nl_query/: handler.py
genai-observability-platform/lambda/pagerduty_formatter/: handler.py
genai-observability-platform/lambda/pii_redactor/: handler.py
genai-observability-platform/lambda/shared/: requirements.txt
genai-observability-platform/lambda/shared/observability_common/: __init__.py  clients.py  config.py  logging.py  models.py  pii_redaction.py  storage.py
genai-observability-platform/lambda/slack_formatter/: handler.py
genai-observability-platform/lambda/stream_processor/: handler.py  requirements.txt
genai-observability-platform/lambda/teams_formatter/: handler.py
genai-observability-platform/lambda/tests/: __init__.py  conftest.py  test_alert_deduplicator.py  test_authorizer.py  test_ingestion.py  test_stream_processor.py
genai-observability-platform/localstack/: init-aws.sh
genai-observability-platform/scripts/: run-tests.sh
genai-observability-platform/sdk/python/: README.md  pyproject.toml
genai-observability-platform/sdk/python/genai_observability/: __init__.py  client.py  config.py  models.py  multi_region.py  tracer.py
genai-observability-platform/sdk/python/genai_observability/exporters/: __init__.py  http_exporter.py  otel_exporter.py
genai-observability-platform/sdk/python/genai_observability/integrations/: __init__.py  crewai.py  langchain.py
genai-observability-platform/sdk/python/tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_models.py  test_multi_region.py  test_otel_exporter.py  test_tracer.py
genai-observability-platform/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
genai-observability-platform/terraform/modules/api-gateway/: main.tf  outputs.tf  variables.tf
genai-observability-platform/terraform/modules/backup/: main.tf  outputs.tf  variables.tf
genai-observability-platform/terraform/modules/bastion/: main.tf  outputs.tf  variables.tf
(+59 files in other folders)
