[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genai-observability-api"
version = "1.0.0"
description = "GenAI Observability Platform Portal API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "GenAI Observability Team" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "boto3>=1.34.0",
    "aioboto3>=12.3.0",
    "opensearch-py>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "moto[all]>=5.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "boto3-stubs[dynamodb,timestream-query,s3,secretsmanager]>=1.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/observability_api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
