[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-observability"
version = "0.1.0"
description = "Observability SDK for GenAI agents - automatic tracing, metrics, and error tracking"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Platform Engineering Team", email = "platform@example.com"}
]
maintainers = [
    {name = "Platform Engineering Team", email = "platform@example.com"}
]
keywords = [
    "observability",
    "genai",
    "llm",
    "tracing",
    "metrics",
    "langchain",
    "crewai",
    "agents",
    "monitoring",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
async = [
    "aiohttp>=3.8.0",
]
langchain = [
    "langchain>=0.1.0",
]
crewai = [
    "crewai>=0.1.0",
]
all = [
    "aiohttp>=3.8.0",
    "langchain>=0.1.0",
    "crewai>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "responses>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/example/genai-observability"
Documentation = "https://docs.example.com/genai-observability"
Repository = "https://github.com/example/genai-observability"
Issues = "https://github.com/example/genai-observability/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["genai_observability*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["genai_observability"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=genai_observability --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.coverage.run]
source = ["genai_observability"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
